Don't have the diff prefs button hit target take up so much space
Change-Id: I807a0d5688530bd802e859ed0678a5c76cb63bc7

--- a/polygerrit-ui/app/elements/gr-diff.html
+++ b/polygerrit-ui/app/elements/gr-diff.html
@@ -32,10 +32,10 @@ limitations under the License.
       }
       .header {
         display: flex;
+        justify-content: space-between;
         margin: 0 var(--default-horizontal-margin) .75em;
       }
       .prefsButton {
-        flex: 1;
         text-align: right;
       }
       .diffContainer {
