Fix typo with event firing: bubble -> bubbles
Change-Id: I90c2302b942d73d593c2a08e3a4a7b413702e682

--- a/polygerrit-ui/app/elements/gr-diff-preferences.html
+++ b/polygerrit-ui/app/elements/gr-diff-preferences.html
@@ -177,11 +177,11 @@ limitations under the License.
       },
 
       _handleSave: function() {
-        this.fire('save', null, {bubble: false});
+        this.fire('save', null, {bubbles: false});
       },
 
       _handleCancel: function() {
-        this.fire('cancel', null, {bubble: false});
+        this.fire('cancel', null, {bubbles: false});
       },
     });
   })();
