Make revision contribute to change status computation
Current code erroneously ignores revision status for change status
computation and renders NEW (no status) for draft revision. Fix it
and render "(Draft)" for draft revisions. For implementation a map
is maintained for patch set number to revision. Later already used
array _allPatchSets may be merged with this new map.

Test Plan:

1. Upload a change, note that first patch set is not a draft
2. Upload a draft patch set
3. Open the change in PolyGerrit
4. Confirm that the "(Draft)" suffix appears in the change header
5. Switch to previous patch set (normal patch set)
6. Confirm that there is no "(Draft)" suffix for this patch set

Change-Id: If2b5cb1555ed018eba026c6d689a2b3aca498130

--- a/polygerrit-ui/app/elements/gr-change-view.html
+++ b/polygerrit-ui/app/elements/gr-change-view.html
@@ -193,7 +193,7 @@ limitations under the License.
             <gr-change-star change="{{_change}}" hidden$="[[!_loggedIn]]"></gr-change-star>
             <a href$="[[_computeChangePermalink(_change._number)]]">[[_change._number]]</a><span>:</span>
             <span>[[_change.subject]]</span>
-            <span class="changeStatus">[[_computeChangeStatus(_change.status)]]</span>
+            <span class="changeStatus">[[_computeChangeStatus(_change, _patchNum)]]</span>
           </span>
           <gr-reply-dropdown id="replyDropdown"
               change-num="[[_changeNum]]"
@@ -361,6 +361,10 @@ limitations under the License.
           type: Array,
           computed: '_computeAllPatchSets(_change)',
         },
+        _patchNumToRevisions: {
+          type: Object,
+          computed: '_computePatchNumToRevisions(_change)',
+        },
         _loggedIn: {
           type: Boolean,
           value: false,
@@ -504,9 +508,14 @@ limitations under the License.
         return '/' + changeNum;
       },
 
-      _computeChangeStatus: function(status) {
+      _computeChangeStatus: function(change, patchNum) {
+        var status = change.status;
         if (status == this.ChangeStatus.NEW) {
-          return '';
+          var revision = this._patchNumToRevisions[patchNum];
+          if (!change.revisions[revision].draft) {
+            return '';
+          }
+          status = this.ChangeStatus.DRAFT;
         }
         return '(' + status.toLowerCase() + ')';
       },
@@ -546,6 +555,14 @@ limitations under the License.
           patchNums.push(change.revisions[rev]._number);
         }
         return patchNums.sort();
+      },
+
+      _computePatchNumToRevisions: function(change) {
+        var revisions = {};
+        for (var rev in change.revisions) {
+          revisions[change.revisions[rev]._number] = rev;
+        }
+        return revisions;
       },
 
       _computePatchIndexIsSelected: function(index, patchNum) {
