--- a/polygerrit-ui/app/elements/gr-change-view.html
+++ b/polygerrit-ui/app/elements/gr-change-view.html
@@ -137,7 +137,7 @@ limitations under the License.
       }
       .commitMessage {
         font-family: var(--monospace-font-family);
-        max-width: 72ch;
+        flex: 0 0 72ch;
       }
       .commitMessage h4 {
         font-family: var(--font-family);
@@ -165,7 +165,7 @@ limitations under the License.
           flex-wrap: nowrap;
         }
         .commitMessage {
-          max-width: none;
+          flex: initial;
         }
       }
     </style>
