--- a/polygerrit-ui/app/elements/gr-change-actions.html
+++ b/polygerrit-ui/app/elements/gr-change-actions.html
@@ -18,6 +18,7 @@ limitations under the License.
 <link rel="import" href="../bower_components/iron-input/iron-input.html">
 <link rel="import" href="../behaviors/rest-client-behavior.html">
 <link rel="import" href="gr-ajax.html">
+<link rel="import" href="gr-confirm-cherrypick-dialog.html">
 <link rel="import" href="gr-confirm-rebase-dialog.html">
 <link rel="import" href="gr-overlay.html">
 <link rel="import" href="gr-request.html">
@@ -94,6 +95,12 @@ limitations under the License.
           on-confirm="_handleRebaseConfirm"
           on-cancel="_handleConfirmDialogCancel"
           hidden></gr-confirm-rebase-dialog>
+      <gr-confirm-cherrypick-dialog id="confirmCherrypick"
+          class="confirmDialog"
+          message="[[commitMessage]]"
+          on-confirm="_handleCherrypickConfirm"
+          on-cancel="_handleConfirmDialogCancel"
+          hidden></gr-confirm-cherrypick-dialog>
     </gr-overlay>
   </template>
   <script>
@@ -109,6 +116,7 @@ limitations under the License.
 
     // TODO(andybons): Add the rest of the revision actions.
     var RevisionActions = {
+      CHERRYPICK: 'cherrypick',
       DELETE: '/',
       PUBLISH: 'publish',
       REBASE: 'rebase',
@@ -130,6 +138,7 @@ limitations under the License.
         },
         changeNum: String,
         patchNum: String,
+        commitMessage: String,
         _loading: {
           type: Boolean,
           value: true,
@@ -153,12 +162,7 @@ limitations under the License.
       },
 
       _actionsChanged: function(actions, revisionActions) {
-        this.hidden =
-            revisionActions.rebase == null &&
-            revisionActions.submit == null &&
-            revisionActions.publish == null &&
-            actions.abandon == null &&
-            actions.restore == null;
+        this.hidden = actions.length == 0 && revisionActions.length == 0;
       },
 
       _computeRevisionActionsPath: function(changeNum, patchNum) {
@@ -186,6 +190,7 @@ limitations under the License.
 
       _computeLoadingLabel: function(action) {
         return {
+          'cherrypick': 'Cherry-Picking...',
           'rebase': 'Rebasing...',
           'submit': 'Submitting...',
         }[action];
@@ -206,7 +211,10 @@ limitations under the License.
         var type = el.getAttribute('data-action-type');
         if (type == 'revision') {
           if (key == RevisionActions.REBASE) {
-            this._showRebaseDialog();
+            this._showActionDialog(this.$.confirmRebase);
+            return;
+          } else if (key == RevisionActions.CHERRYPICK) {
+            this._showActionDialog(this.$.confirmCherrypick);
             return;
           }
           this._fireRevisionAction(this._prependSlash(key),
@@ -243,6 +251,28 @@ limitations under the License.
             payload);
       },
 
+      _handleCherrypickConfirm: function() {
+        var el = this.$.confirmCherrypick;
+        if (!el.branch || el.branch.length == 0) {
+          // TODO(davido): Fix error handling
+          alert('destination must be non-empty');
+          return;
+        }
+        if (!el.message || el.message.length == 0) {
+          alert('message must not be empty');
+          return;
+        }
+        this.$.overlay.close();
+        el.hidden = false;
+        this._fireRevisionAction('/cherrypick',
+            this._revisionActions.cherrypick,
+            {
+              destination: el.branch,
+              message: el.message,
+            }
+        );
+      },
+
       _fireChangeAction: function(endpoint, action) {
         this._send(action.method, {}, endpoint).then(
           function() {
@@ -269,9 +299,13 @@ limitations under the License.
         }
 
         this._send(action.method, opt_payload, endpoint, true).then(
-          function() {
-            this.fire('reload-change', null, {bubbles: false});
-            enableButton();
+          function(req) {
+            if (action.__key == RevisionActions.CHERRYPICK) {
+              page.show(this.computeChangePath(req.response._number));
+            } else {
+              this.fire('reload-change', null, {bubbles: false});
+              enableButton();
+            }
           }.bind(this)).catch(function(err) {
             // TODO(andybons): Handle merge conflict (409 status);
             alert('Oops. Something went wrong. Check the console and bug the ' +
@@ -281,8 +315,8 @@ limitations under the License.
           });
       },
 
-      _showRebaseDialog: function() {
-        this.$.confirmRebase.hidden = false;
+      _showActionDialog: function(dialog) {
+        dialog.hidden = false;
         this.$.overlay.open();
       },
 
