--- a/polygerrit-ui/app/elements/gr-change-view.html
+++ b/polygerrit-ui/app/elements/gr-change-view.html
@@ -281,6 +281,7 @@ limitations under the License.
               actions="[[_change.actions]]"
               change-num="[[_changeNum]]"
               patch-num="[[_patchNum]]"
+              commit-message="[[_commitInfo.message]]"
               on-reload-change="_handleReloadChange"></gr-change-actions>
         </div>
         <div class="changeInfo-column commitMessage">
@@ -427,10 +428,10 @@ limitations under the License.
         var currentPatchNum =
             this._change.revisions[this._change.current_revision]._number;
         if (patchNum == currentPatchNum) {
-          page.show(this._computeChangePath(this._changeNum));
+          page.show(this.computeChangePath(this._changeNum));
           return;
         }
-        page.show(this._computeChangePath(this._changeNum) + '/' + patchNum);
+        page.show(this.computeChangePath(this._changeNum) + '/' + patchNum);
       },
 
       _handleDownloadTap: function(e) {
@@ -498,10 +499,6 @@ limitations under the License.
 
         var title = change.subject + ' (' + change.change_id.substr(0, 9) + ')';
         this.fire('title-change', {title: title});
-      },
-
-      _computeChangePath: function(changeNum) {
-        return '/c/' + changeNum;
       },
 
       _computeChangePermalink: function(changeNum) {
@@ -614,7 +611,7 @@ limitations under the License.
       },
 
       _handleReloadChange: function() {
-        page.show(this._computeChangePath(this._changeNum));
+        page.show(this.computeChangePath(this._changeNum));
       },
 
       _reload: function() {
