Display 'Strategy' (submit type) value in change view
- when 'submit_type' is not available in change info, it gets taken
  from project config
- strategy is not displayed anymore once a change has been submitted

Bug: Issue 3905
Change-Id: Idf4e821cf8f077c86fe7d7bef82e1c82a5d2b112

--- a/polygerrit-ui/app/test/gr-change-view-test.html
+++ b/polygerrit-ui/app/test/gr-change-view-test.html
@@ -59,6 +59,15 @@ limitations under the License.
       server.restore();
     });
 
+    test('computed fields', function() {
+      assert.equal(element._computeStrategy({submit_type: 'CHERRY_PICK'}),
+          'Cherry Pick');
+      assert.equal(element._computeStrategy({submit_type: 'CHERRY_PICK'},
+          {submit_type: 'MERGE_IF_NECESSARY'}), 'Cherry Pick');
+      assert.equal(element._computeStrategy({},
+          {submit_type: 'MERGE_IF_NECESSARY'}), 'Merge if Necessary');
+    });
+
     test('keyboard shortcuts', function() {
       var showStub = sinon.stub(page, 'show');
 
