--- a/polygerrit-ui/app/elements/gr-change-view.html
+++ b/polygerrit-ui/app/elements/gr-change-view.html
@@ -242,9 +242,9 @@ limitations under the License.
               <td class="changeMetadata-label">Topic</td>
               <td>[[_change.topic]]</td>
             </tr>
-            <tr>
+            <tr hidden$="[[_change.submitted]]" hidden>
               <td class="changeMetadata-label">Strategy</td>
-              <td></td>
+              <td>[[_computeStrategy(_change, _projectConfig)]]</td>
             </tr>
             <tr>
               <td class="changeMetadata-label">Updated</td>
@@ -315,6 +315,14 @@ limitations under the License.
   <script>
   (function() {
     'use strict';
+
+    var SubmitTypeLabel = {
+      FAST_FORWARD_ONLY: 'Fast Forward Only',
+      MERGE_IF_NECESSARY: 'Merge if Necessary',
+      REBASE_IF_NECESSARY: 'Rebase if Necessary',
+      MERGE_ALWAYS: 'Always Merge',
+      CHERRY_PICK: 'Cherry Pick',
+    };
 
     Polymer({
       is: 'gr-change-view',
@@ -545,6 +553,14 @@ limitations under the License.
 
       _computePatchIndexIsSelected: function(index, patchNum) {
         return this._allPatchSets[index] == patchNum;
+      },
+
+      _computeStrategy: function(change, projectConfig) {
+        var submitType = change.submit_type;
+        if (!submitType) {
+          submitType = projectConfig.submit_type;
+        }
+        return SubmitTypeLabel[submitType];
       },
 
       _computeLabelNames: function(labels) {
