Add backtick to HTML escape code
Internet Explorer treats a backtick (`) as an attribute
delimiter like " and '. Account for this in HTML escape
code.

Change-Id: I48bccc0013829662479ce321a34f5c69e48aca95

--- a/polygerrit-ui/app/elements/gr-diff-side.html
+++ b/polygerrit-ui/app/elements/gr-diff-side.html
@@ -312,9 +312,11 @@ limitations under the License.
       },
 
       _contentChanged: function(diff) {
+        var now = new Date();
         this._clearChildren(this.$.numbers);
         this._clearChildren(this.$.content);
         this._render(diff, 0, diff.length - 1);
+        console.log('Render took', (new Date()) - now, 'ms');
       },
 
       _computeContainerClass: function(canComment) {
