Group reviewer updates in the UI
Sequential updates are grouped if:
- They were performed within short timeframe (6 seconds)
- Made by the same person
- Non-change updates are discarded within a group
- Groups with no-change updates are discarded (eg CC -> CC)

This essentially moves implementation from /c/94490/ to client side
to gather requirements ahead of server-side implementation

Bug: Issue 4383, Issue 5256
Change-Id: Ieb405d4b5562294adb23bdd14879e9e67737890f

--- a/polygerrit-ui/app/elements/change/gr-change-view/gr-change-view_test.html
+++ b/polygerrit-ui/app/elements/change/gr-change-view/gr-change-view_test.html
@@ -101,6 +101,15 @@ limitations under the License.
 
       test('shift + R should fetch and navigate to the latest patch set',
           function(done) {
+        sandbox.stub(window, 'fetch', function() {
+          return Promise.resolve({
+            ok: true,
+            text: function() {
+              return Promise.resolve(')]}\'\n');
+            },
+          });
+        });
+
         element._changeNum = '42';
         element._patchRange = {
           basePatchNum: 'PARENT',
