--- a/polygerrit-ui/app/elements/shared/gr-rest-api-interface/gr-rest-api-interface.html
+++ b/polygerrit-ui/app/elements/shared/gr-rest-api-interface/gr-rest-api-interface.html
@@ -21,4 +21,5 @@ limitations under the License.
 
 <dom-module id="gr-rest-api-interface">
   <script src="gr-rest-api-interface.js"></script>
+  <script src="gr-reviewer-updates-parser.js"></script>
 </dom-module>
