Group reviewer updates in the UI
Sequential updates are grouped if:
- They were performed within short timeframe (6 seconds)
- Made by the same person
- Non-change updates are discarded within a group
- Groups with no-change updates are discarded (eg CC -> CC)

This essentially moves implementation from /c/94490/ to client side
to gather requirements ahead of server-side implementation

Bug: Issue 4383, Issue 5256
Change-Id: Ieb405d4b5562294adb23bdd14879e9e67737890f

--- a/polygerrit-ui/app/elements/change/gr-message/gr-message.html
+++ b/polygerrit-ui/app/elements/change/gr-message/gr-message.html
@@ -84,6 +84,7 @@ limitations under the License.
       .collapsed .name,
       .collapsed .content,
       .collapsed .message,
+      .collapsed .updateCategory,
       gr-account-chip {
         display: inline;
       }
@@ -140,19 +141,31 @@ limitations under the License.
                 patch-num="[[message._revision_number]]"
                 project-config="[[projectConfig]]"></gr-comment-list>
           </div>
+        </template>
+        <template is="dom-if" if="[[_computeIsReviewerUpdate(message)]]">
+          <div class="content">
+            <template
+                is="dom-repeat" items="[[message.updates]]" as="update">
+              <div class="updateCategory">
+                [[update.message]]
+                <template
+                    is="dom-repeat" items="[[update.reviewers]]" as="reviewer">
+                  <gr-account-chip account="[[reviewer]]">
+                  </gr-account-chip>
+                </template>
+              </div>
+            </template>
+          </div>
+        </template>
+        <template is="dom-if" if="[[!message.id]]">
+          <span class="date">
+            <gr-date-formatter date-str="[[message.date]]"></gr-date-formatter>
+          </span>
+        </template>
+        <template is="dom-if" if="[[message.id]]">
           <a class="date" href$="[[_computeMessageHash(message)]]" on-tap="_handleLinkTap">
             <gr-date-formatter date-str="[[message.date]]"></gr-date-formatter>
           </a>
-        </template>
-        <template is="dom-if" if="[[message.reviewer]]">
-          <div class="content">
-            set reviewer status for
-            <gr-account-chip account="[[message.reviewer]]">
-            </gr-account-chip>
-            to [[message.state]].
-          </div>
-          <gr-date-formatter class="date" date-str="[[message.updated]]">
-          </gr-date-formatter>
         </template>
       </div>
       <div class="replyContainer" hidden$="[[!showReplyButton]]" hidden>
