Group reviewer updates in the UI
Sequential updates are grouped if:
- They were performed within short timeframe (6 seconds)
- Made by the same person
- Non-change updates are discarded within a group
- Groups with no-change updates are discarded (eg CC -> CC)

This essentially moves implementation from /c/94490/ to client side
to gather requirements ahead of server-side implementation

Bug: Issue 4383, Issue 5256
Change-Id: Ieb405d4b5562294adb23bdd14879e9e67737890f

--- a/polygerrit-ui/app/elements/shared/gr-rest-api-interface/gr-rest-api-interface_test.html
+++ b/polygerrit-ui/app/elements/shared/gr-rest-api-interface/gr-rest-api-interface_test.html
@@ -426,5 +426,14 @@ limitations under the License.
       assert.isTrue(element.send.calledWith(
           'PUT', '/config/server/email.confirm', {token: 'foo'}));
     });
+
+    test('GrReviewerUpdatesParser.parse is used', function(done) {
+      sandbox.stub(GrReviewerUpdatesParser, 'parse').returns('foo');
+      element.getChangeDetail(42).then(function(result) {
+        assert.isTrue(element._formatReviewerUpdates.calledOnce);
+        assert.equal(result, 'foo');
+        done();
+      });
+    });
   });
 </script>
