Group reviewer updates in the UI (integrate)
Picks up grouped reviewer updates and shows them in gr-message-list.

Bug: Issue 4383, Issue 5256
Change-Id: If799717294e806eccad4087b19566fd15618c600

--- a/polygerrit-ui/app/elements/change/gr-change-view/gr-change-view_test.html
+++ b/polygerrit-ui/app/elements/change/gr-change-view/gr-change-view_test.html
@@ -101,6 +101,16 @@ limitations under the License.
 
       test('shift + R should fetch and navigate to the latest patch set',
           function(done) {
+        // Prevent all network requests to prevent random exceptions.
+        sandbox.stub(window, 'fetch', function() {
+          return Promise.resolve({
+            ok: true,
+            text: function() {
+              return Promise.resolve(')]}\'\n');
+            },
+          });
+        });
+
         element._changeNum = '42';
         element._patchRange = {
           basePatchNum: 'PARENT',
