Support aria for gr-autocomplete
Makes autocomplete entries focusable, supplies the <li> elements with
proper keydown handling, and adds a focus() call to <gr-cursor-manager>.
This focus() call is optional, enabled by the 'should-focus' property.

Bug: Issue 4281, Issue 4279, Issue 5321
Change-Id: I944350090ccb240bde6302f0aba8f2585172f5df

--- a/polygerrit-ui/app/elements/shared/gr-autocomplete/gr-autocomplete.html
+++ b/polygerrit-ui/app/elements/shared/gr-autocomplete/gr-autocomplete.html
@@ -44,6 +44,9 @@ limitations under the License.
         cursor: pointer;
         padding: .5em .75em;
       }
+      li:focus {
+        outline: none;
+      }
       li.selected {
         background-color: #eee;
       }
@@ -55,16 +58,21 @@ limitations under the License.
         disabled$="[[disabled]]"
         bind-value="{{text}}"
         placeholder="[[placeholder]]"
-        on-keydown="_handleInputKeydown"
+        on-keydown="_handleKeydown"
         on-focus="_onInputFocus"
         autocomplete="off" />
     <div
         id="suggestions"
+        role="listbox"
         hidden$="[[_computeSuggestionsHidden(_suggestions, _focused)]]">
       <ul>
         <template is="dom-repeat" items="[[_suggestions]]">
           <li
               data-index$="[[index]]"
+              tabindex="-1"
+              aria-label$="[[item.name]]"
+              on-keydown="_handleKeydown"
+              role="option"
               on-tap="_handleSuggestionTap">[[item.name]]</li>
         </template>
       </ul>
@@ -74,6 +82,7 @@ limitations under the License.
         index="{{_index}}"
         cursor-target-class="selected"
         scroll-behavior="keep-visible"
+        should-focus
         stops="[[_getSuggestionElems(_suggestions)]]"></gr-cursor-manager>
   </template>
   <script src="gr-autocomplete.js"></script>
