Support aria for gr-autocomplete
Makes autocomplete entries focusable, supplies the <li> elements with
proper keydown handling, and adds a focus() call to <gr-cursor-manager>.
This focus() call is optional, enabled by the 'focus-on-move' property.

Bug: Issue 4281, Issue 4279, Issue 5321
Change-Id: I944350090ccb240bde6302f0aba8f2585172f5df

--- a/polygerrit-ui/app/elements/shared/gr-cursor-manager/gr-cursor-manager_test.html
+++ b/polygerrit-ui/app/elements/shared/gr-cursor-manager/gr-cursor-manager_test.html
@@ -165,5 +165,22 @@ limitations under the License.
       // Go back. No more meet the condition. Should be at stop 0.
       assert.equal(element._getNextindex(-1, isLetterB), 0);
     });
+
+    test('focusOnMove prop', function() {
+      var listEls = list.querySelectorAll('li');
+      for (var i = 0; i < listEls.length; i++) {
+        sandbox.spy(listEls[i], 'focus');
+      }
+      element.stops = listEls;
+      element.setCursor(list.children[0]);
+
+      element.focusOnMove = false;
+      element.next();
+      assert.isFalse(element.target.focus.called);
+
+      element.focusOnMove = true;
+      element.next();
+      assert.isTrue(element.target.focus.called);
+    });
   });
 </script>
